media/gpu: fix the vp9 decode when the stream starts with an Intra only frame

Current implementation allows only a keyframe as the first frame in the
stream. This patch relaxes the requiremnt a bit and legalize the decoding
when it starts with an Intra only frame. Also allows the resolution
change if there is no prior decoded frames and the current frame is an
intra only one.

BUG=889768

Change-Id: Ic3bdedc329072b473f057407101193ac7ba4dc09
Reviewed-on: https://chromium-review.googlesource.com/c/1341146
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Hirokazu Honda <hiroh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611532}
Former-commit-id: 571633057a915e7eb7b3c552a5757f0176a0c8d3